DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-12-2004 patrickh    Fixed the config definition editor.
                        NEW VERSION: 0.22.0
Nov-05-2004 patrickh    Updated to require Tweek 0.19.2.
                        NEW VERSION: 0.21.1
Nov-04-2004 aronb       Java API changes.
                        NEW VERSION: 0.21.0
Oct-29-2004 patrickh    Relocated the JCCL Java libraries to the directory
                        $JCCL_BASE_DIR/share/jccl/java and the JCCL Beans to
                        $JCCL_BASE_DIR/share/jccl/beans.
                        NEW VERSION: 0.20.0
Oct-18-2004 patrickh    Re-enabled validation of .jconf and .jdef files
                        loaded into the Java configuration editor Bean.
                        NEW VERSION: 0.19.2
Oct-11-2004 patrickh    Updated to require VPR 0.40.0.
                        NEW VERSION: 0.19.1
Oct-07-2004 patrickh    Extended the property definition editor to allow the
                        "editable" attribute for enumerations to be changed.
                        NEW VERSION: 0.19.0
Sep-17-2004 patrickh    Introduced the concept of editable enumerations for use
                        in VRJConfig.  The config definition file format has
                        been modified to allow for this, and the .jdef file
                        format version is now 3.1.
                        NEW VERSION: 0.18.0
Sep-17-2004 aronb       Added the ability to the C++ API to test if a
                        config elmeent is derived from a given token.
                        NEW VERSION: 0.17.2
Sep-11-2004 patrickh    Updated for JDOM 1.0.
                        NEW VERSION: 0.17.1
Apr-05-2004 patrickh    Refactored jccl::ConfigManager to reduce public
                        accessibility of the pending configuration list.
                        NEW VERSION: 0.17.0